Remove dependency on Jackson, now using Jetty's JSON.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>